<resources>
    <string name="app_name">Football Application</string>
    <string name="image_badge">Image Badge</string>
    <string name="league">League</string>
    <string name="match">Match</string>
    <string name="favorite">Favorite</string>

    <integer-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </integer-array>

    <string-array name="league_badge">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ocy2fe1566216901.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/dqo6r91549878326.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/cplp641535733210.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/sfhanl1547383730.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vw72bl1534096708.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vm1qlp1535986713.png</item>
    </string-array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string name="image_banner">Image Banner</string>
    <string name="versus">VS</string>
    <string name="previous_match">Previous</string>
    <string name="next_match">Next</string>
    <string name="overview">Overview</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>
    <string name="search_event">Search Event</string>
    <string name="search_team">Search Team</string>
    <string name="empty_result">No Data</string>
    <string name="add_to_favorite">Successfully added</string>
    <string name="remove_from_favorite">Successfully deleted from favorite</string>
    <string name="match_detail">Match Detail</string>
    <string name="failed_load_data">Failed to get data from server</string>

    <string name="classement">Classement</string>
    <string name="team">Team</string>

    <string name="played">P</string>
    <string name="goalsFor">GF</string>
    <string name="goalsAgainst">GA</string>
    <string name="goalsDifference">GD</string>
    <string name="win">W</string>
    <string name="draw">D</string>
    <string name="loss">L</string>
    <string name="total">T</string>
    <string name="number">No</string>
</resources>
